Combined piece/square click handlers into a single simpler implementation; fixed King/Queen positioning for Black; store executed moves for later; arbitrary color change for visibility

--- a/src/chess/chess.css
+++ b/src/chess/chess.css
@@ -40,7 +40,7 @@ td div.selected {
 }
 
 td div.empty-target {
-  border: 0.1em solid #0088F0;
+  border: 0.1em solid #22CCF0;
 }
 
 td div.attack-target {
